Closed Bug 41832 Opened 26 years ago Closed 26 years ago

Pthreads: PR_WaitCondVar does not set error code on failure

Categories

(NSPR :: NSPR, defect, P3)

defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: wtc, Assigned: wtc)

Details

If pthread_cond_wait or pthread_cond_timedwait fails, PR_WaitCondVar merely returns PR_FAILURE without calling PR_SetError to set the error code.
Status: NEW → ASSIGNED
Target Milestone: --- → 4.1
Checked in a fix on the main trunk. /cvsroot/mozilla/nsprpub/pr/src/pthreads/ptsynch.c, revision 3.17
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.