Bugzilla bug #41832: set the error codes if pthread_cond_wait or pthread_cond_timedwait fails.